# xarray-gdal

./: Makefile  README.md  setup.cfg
tests/: test_xarray_plugin.py
xarray_gdal/: xarray_plugin.py
