[metadata]
name = xarray-gdal
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Experimental GDAL plugin for Xarray (not intended for public release).
url = https://github.com/bopen/xarray-gdal
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description =
    # xarray-gdal
    Experimental GDAL plugin for Xarray (not intended for public release).

    The purpose of the project is to experiment how to best map the GDAL data model to the xarray / netCDF one.

[options]
packages = find:
python_requires = >=3.7
install_requires =
    xarray >= 0.17.0
    rioxarray

[options.entry_points]
xarray.backends =
    gdal-beta = xarray_gdal.xarray_plugin:GdalBetaBackend
    gdal-raw = xarray_gdal.xarray_plugin:GdalRawBackend

[isort]
profile = black
